# hc-stress-test

./: Cargo.toml  README.md  default.nix  package-lock.json  package.json
dnas/files/workdir/: dna.yaml
dnas/files/zomes/coordinator/files/: Cargo.toml
dnas/files/zomes/coordinator/files/src/: all_files.rs  all_images.rs  file.rs  lib.rs
dnas/files/zomes/integrity/files/src/: file.rs  lib.rs
nix/: sources.json
tests/: package.json
tests/src/files/files/: file.test.ts
ui/: index.html  package.json  rollup.config.js  tsconfig.json
ui/src/: contexts.ts  holochain-app.ts  utils.ts
ui/src/files/files/: all-images.ts  edit-file.ts  file-detail.ts  types.ts
workdir/: happ.yaml  web-happ.yaml
