[profile.dev]
opt-level = "z"

[profile.release]
opt-level = "z"

[workspace]
members = ["dnas/*/zomes/coordinator/*", "dnas/*/zomes/integrity/*"]

[workspace.dependencies]
hdi = "0.2.0-beta-rc.3"
hdk = "0.1.0-beta-rc.3"
serde = "1"

[workspace.dependencies.files]
path = "dnas/files/zomes/coordinator/files"

[workspace.dependencies.files_integrity]
path = "dnas/files/zomes/integrity/files"
