[profile.dev]
opt-level = "z"

[profile.release]
opt-level = "z"

[workspace]
members = ["dnas/*/zomes/coordinator/*", "dnas/*/zomes/integrity/*"]

[workspace.dependencies]
hdk = "0.3.0-beta-dev.4"
hdi = "0.4.0-beta-dev.3"
serde = "1"

[workspace.dependencies.files]
path = "dnas/files/zomes/coordinator/files"

[workspace.dependencies.files_integrity]
path = "dnas/files/zomes/integrity/files"
